--- a/user-service.yml
+++ b/user-service.yml
@@ -4,12 +4,12 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.1.2:8002/registry-server/eureka/
+      defaultZone: http://139.129.203.216:8002/registry-server/eureka/
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.2:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://139.129.203.216:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
     username: root
-    password: 123456
+    password: rootAdmin*1
     driver-class-name: com.mysql.jdbc.Driver
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
@@ -27,7 +27,7 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
 mybatis:
-  config-location: file:/home/jackzhong/Documents/workspace/tsh_microservices/config-repo/mybatis-config.xml
+  config-location: file:/public/config-repo/mybatis-config.xml
 logging:
   level:
     root: info
