--- a/product-service.yml
+++ b/product-service.yml
@@ -4,12 +4,12 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://139.129.203.216:8002/registry-server/eureka/
+      defaultZone: http://192.168.1.230:8002/registry-server/eureka/
 spring:
   datasource:
-    url: jdbc:mysql://139.129.203.216:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-    username: root
-    password: rootAdmin*1
+    url: jdbc:mysql://192.168.1.112:3306/hx_tsh_dep?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    username: hx_tsh_dep
+    password: hx_tsh_dep
     driver-class-name: com.mysql.jdbc.Driver
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
@@ -38,7 +38,7 @@ spring:
       min-idle: 0
       timeout: 0
 mybatis:
-  config-location: file:/public/config-repo/mybatis-config.xml
+  config-location: file:C:/config-repo/mybatis-config.xml
 logging:
   level:
     root: info
