--- a/user-service.yml
+++ b/user-service.yml
@@ -7,9 +7,9 @@ eureka:
       defaultZone: http://192.168.1.230:8002/registry-server/eureka/
 spring:
   datasource:
-    url: jdbc:mysql://139.129.203.216:3306/test?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-    username: root
-    password: rootAdmin*1
+    url: jdbc:mysql://192.168.1.112:3306/hx_tsh_dep?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+    username: hx_tsh_dep
+    password: hx_tsh_dep
     driver-class-name: com.mysql.jdbc.Driver
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
